--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,27 @@
 .size-img{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 5px;
 }
 
 .padre{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .links{
-    margin: 5px;
+    /* margin: 5px; */
+    text-decoration: none;
+    color: #FFF;
+    text-align: center;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    transition: all 0.25s;
+}
+
+.links:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
 .imagen{
